--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 <font size="5" face="Apple Chancery" color="LimeGreen">Zespół zajmuje obecnie 7 miejsce w tabeli.</font><br>
 <img src="tabela.png" width="600px"><br><br>
 
-	<table border="1" width="100">
+      <table border="1">
   	 <tr align="center">
-      <td>1</td> <td>2</td> <td>3</td>
+      <td width="75px" height="75px">1</td> <td width="75px" height="75px">2</td> <td width="75px" height="75px">3</td>
    	 </tr>
      <tr align="center">
-      <td>4</td> <td>5</td> <td>6</td>
+      <td width="75px" height="75px">4</td> <td width="75px" height="75px">5</td> <td width="75px" height="75px">6</td>
      </tr>
      <tr align="center">
-      <td>7</td> <td>8</td> <td>9</td>
+      <td width="75px" height="75px">7</td> <td width="75px" height="75px">8</td> <td width="75px" height="75px">9</td>
      </tr>
-</table>
+     </table>
 	</body>
 	</html>
